--- a/src/app.css
+++ b/src/app.css
@@ -4,9 +4,9 @@
 
 @layer base {
 	@font-face {
-		font-family: 'Work Sans';
+		font-family: 'Nunito';
 		font-weight: 400;
-		src: url('$lib/assets/fonts/work-sans-v16-latin-regular.woff2') format('woff2');
+		src: url('$lib/assets/fonts/nunito-v23-latin-regular.woff2') format('woff2');
 	}
 	:root {
 		
